# voidmaker

./: .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
characters/: README.md
docs/: PLAN.md  config.example.toml  homelab.example.md  voidmaker.desktop
scripts/: import_portraits.py
src/voidmaker/: __init__.py  __main__.py  backchannel.py  config.py  services.py
src/voidmaker/admin/: server.py
src/voidmaker/agent/: client.py  curator.py  precheck.py  reply.py  tools.py
src/voidmaker/character/: loader.py  model.py
src/voidmaker/perception/: desktop.py  homelab.py  proactive.py  screenshot.py
src/voidmaker/storage/: history.py  memory.py  permissions.py
src/voidmaker/ui/: __init__.py  agent_worker.py  app.py  bubble.py  curator_worker.py  ipc.py  notepad_window.py  permission_bubble.py  pet_window.py  portrait_widget.py  precheck_worker.py  snip_worker.py  stt_worker.py  tray.py  voice_chat_worker.py  voice_worker.py
src/voidmaker/voice/: client.py  stt.py  tone_refs.py
tests/: test_admin.py  test_backchannel.py  test_bubble.py  test_character.py  test_config.py  test_desktop.py  test_homelab.py  test_memory.py  test_notepad.py  test_permission_bubble.py  test_permissions.py  test_portrait.py  test_precheck.py  test_reply.py  test_services.py  test_stt.py  test_voice.py
